<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="create">Создать</string>
    <string name="save">Сохранить</string>
    <string name="title_hello">Привет, практикум</string>
    <string name="delete">Удалить</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share">Поделиться</string>
    <string name="redact_information">Редактировать информацию</string>
    <string name="delete_play_list">Удалить плейлист</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="user_argeement">Пользовательское соглашение</string>
    <string name="url_YP">https://practicum.yandex.ru/profile/android-developer</string>
    <string name="message_to_mail">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="subject_to_mail">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="my_email">plusiknoisy98@gmail.com</string>
    <string name="practicum_offer">https://yandex.ru/legal/practicum_offer/</string>
    <string name="disconnect_message">Проблемы со связью\n\nЗагрузка не удалась.Проверьте\nподключение к интернету</string>
    <string name="result_is_empty">Ничего не нашлось</string>
    <string name="refresh">Обновить</string>
    <string name="search_history">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="collection">Альбом</string>
    <string name="releaseYear">Год</string>
    <string name="jenre">Жанр</string>
    <string name="country">Страна</string>
    <string name="reset_timer">00:00</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="favoriteTracks">Избранные треки</string>
    <string name="playList">Плейлисты</string>
    <string name="mediaIsempty">Ваша медиатека пуста</string>
    <string name="playListIsEmpty">Вы не создали\nни одного плейлиста</string>
    <string name="addToPlayList">Добавить в плейлист</string>
    <string name="newPlayList">Новый плейлист</string>
    <string name="discription">Описание</string>
    <string name="album_name">Название*</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <plurals name="tracks_count">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>
    <plurals name="minutes_count">
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>
    <string name="add_to_playlist">Добавлено в плейлист [%1$s]</string>
    <string name="track_in_playlist">Трек уже добавлен в плейлист [%1$s]</string>
    <string name="finish_to_create_playlist">Завершить создание плейлиста?</string>
    <string name="all_data_will_be_lose">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="complete_create_playlist">Плейлист [%1$s] создан</string>
    <string name="playlist_exists">"Плейлист c именем: [%1$s] уже существует"</string>
    <string name="tracks_in_album_is_empty">Вы не добавили ни одного трека</string>
    <string name="delete_track">Хотите удалить трек?</string>
    <string name="yes">ДА</string>
    <string name="no">НЕТ</string>
    <string name="track_in_album_Empty">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="share_album_text">%1$s\n%2$s\n%3$s\n%4$s</string>
    <string name="item_track">%1$d. %2$s - %3$s (%4$s)</string>
    <string name="do_you_want_delete_album">Хотите удалить плейлист «%1$s»?</string>
    <string name="redact">Редактировать</string>

</resources>