<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="?attr/colorSecondary"
    tools:context=".ui.settings.fragments.SettingFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/well_textSize"
            android:textStyle="normal"
            android:layout_marginTop="@dimen/marginTop14"
            android:layout_marginStart="@dimen/marginSettings"
            android:fontFamily="@font/ys_display_medium"/>
    </LinearLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/themeSwitcher"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:text="@string/dark_theme"
        app:thumbTint="@color/thumbTint"
        app:trackTint="@color/trackTint"
        android:layout_marginTop="24dp"
        android:textAlignment="textStart"
        android:layout_marginStart="@dimen/marginSettings"
        android:textSize="@dimen/medium_textSize"
        android:layout_marginEnd="12dp" />
    <Button
        android:id="@+id/shareApp"
        style="@style/settingButton"
        android:text="@string/share_app"
        app:drawableEndCompat="@drawable/ic_share_24" />

    <Button
        android:id="@+id/messageToSupport"
        style="@style/settingButton"
        android:paddingEnd="2dp"
        android:text="@string/write_to_support"
        app:drawableEndCompat="@drawable/ic_support_24" />
    <Button
        android:id="@+id/buttonUserArgemeent"
        style="@style/settingButton"
        android:paddingEnd="8dp"
        app:drawableEndCompat="@drawable/ic_charge_24"
        android:text="@string/user_argeement"/>
</LinearLayout>