<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/blue">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_marginTop="14dp"
        android:layout_marginHorizontal="16dp"
        android:textColor="@color/white"
        android:textSize="@dimen/well_textSize">
    </TextView>

    <Button
        android:id="@+id/searchButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_weight="1"
        android:layout_marginHorizontal="16dp"
        android:backgroundTint="@color/white"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/search"
        android:textAllCaps="false"
        android:textColor="@color/blackYP"
        android:textSize="@dimen/well_textSize"
        android:textStyle="normal"
        app:cornerRadius="@dimen/cornerRadius"
        app:icon="@drawable/ic_search_24"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconTint="@color/blackYP"
        android:foreground="?attr/selectableItemBackground"/>
    <Button
        android:id="@+id/mediaButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/media"
        android:textColor="@color/blackYP"
        android:textSize="@dimen/well_textSize"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        app:icon="@drawable/ic_media_24"
        app:iconTint="@color/blackYP"
        app:iconGravity="textStart"
        app:cornerRadius="@dimen/cornerRadius"
        android:textAllCaps="false"
        app:iconPadding="8dp"
        android:textStyle="normal"
        android:foreground="?attr/selectableItemBackground"/>

    <Button
        android:id="@+id/settingButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="28dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/settings"
        android:textAllCaps="false"
        android:textColor="@color/blackYP"
        android:textSize="@dimen/well_textSize"
        android:textStyle="normal"
        app:cornerRadius="@dimen/cornerRadius"
        app:icon="@drawable/ic_settings_24"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconTint="@color/blackYP" />
</LinearLayout>