<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/placeholderText"
    tools:context=".ui.playList.fragment.PlayListCreateFragment">

    <ImageButton
        android:id="@+id/back_button_play_list"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:background="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back_arrow_24"
        app:tint="@color/placeholderBack" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/back_button_play_list"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/back_button_play_list"
        android:layout_marginStart="@dimen/marginTop12"
        android:text="@string/newPlayList"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="@dimen/well_textSize"
        android:textStyle="normal"
        android:fontFamily="@font/ys_display_medium"/>

    <ImageView
        android:id="@+id/image_play_list"
        android:layout_width="@dimen/marginTop312"
        android:layout_height="@dimen/marginTop312"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_button_play_list"
        android:background="@drawable/image_to_create_play_list"
        android:layout_marginTop="@dimen/marginTop30"
        android:clipToOutline="true"
        android:clickable="true"
        android:scaleType="centerCrop"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_album_name"
        android:layout_width="326dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_play_list"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="@dimen/marginSettings"
        android:hint="@string/album_name"
        android:textColorHint="?attr/colorOnSurface"
        app:boxStrokeWidth="@dimen/margin2"
        app:boxStrokeWidthFocused="@dimen/margin2"
        app:boxCornerRadiusTopStart="@dimen/margin4"
        app:boxCornerRadiusBottomEnd="@dimen/margin4"
        app:boxCornerRadiusBottomStart="@dimen/margin4"
        app:boxCornerRadiusTopEnd="@dimen/margin4"
        app:boxStrokeColor="@color/box_stroke_color"
        app:boxStrokeErrorColor="@color/box_stroke_color"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_play_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="326dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tl_album_name"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="@dimen/marginSettings"
        android:hint="@string/discription"
        android:textColorHint="?attr/colorOnSurface"
        app:boxStrokeWidth="@dimen/margin2"
        app:boxStrokeWidthFocused="@dimen/margin2"
        app:boxCornerRadiusTopStart="@dimen/margin4"
        app:boxCornerRadiusBottomEnd="@dimen/margin4"
        app:boxCornerRadiusBottomStart="@dimen/margin4"
        app:boxCornerRadiusTopEnd="@dimen/margin4"
        app:boxStrokeColor="@color/box_stroke_color"
        app:boxStrokeErrorColor="@color/box_stroke_color"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/discription_play_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/createButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="@dimen/marginTop18"
        android:layout_marginBottom="@dimen/marginTop32"
        android:text="@string/create"
        android:textAllCaps="false"
        android:textSize="@dimen/medium_textSize"
        android:fontFamily="@font/ys_display_medium"
        android:textColor="@color/white"
        android:background="@drawable/selector_button_create"
        android:enabled="false" />

</androidx.constraintlayout.widget.ConstraintLayout>